// Phonebook project
#ifndef PHONEBOOK_ADDRESS_H_
#define PHONEBOOK_ADDRESS_H_

class Address {

};

#endif // PHONEBOOK_ADDRESS_H_
