// Phonebook project
#ifndef PHONEBOOK_PHONE_NUMBER_H_
#define PHONEBOOK_PHONE_NUMBER_H_

class PhoneNumber {

};

#endif // PHONEBOOK_PHONE_NUMBER_H_
