// Phonebook project
#ifndef PHONEBOOK_RECORD_H_
#define PHONEBOOK_RECORD_H_

// #include "address/address.h"
// #include "name/name.h"
// #include "phone_number/phone_number.h"

class Record { // : public Address, public PhoneNumber, public Name {

}; 

#endif // PHONEBOOK_RECORD_H_
